--- a/nft-multichain-minter/backend/package.json
+++ b/nft-multichain-minter/backend/package.json
@@ -7,6 +7,9 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "start:worker": "node dist/worker.js",
+    "start:prod": "NODE_ENV=production node dist/server.js",
+    "start:worker:prod": "NODE_ENV=production node dist/worker.js",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
